tests/interpreter/call-expression-not-callable.stderr
error: 'Number' object is not callable
 --> $DIR/call-expression-not-callable.lox:1:1
  |
1 | 5();
  | ^
